// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test ButtonCircle click event 1`] = `
<ButtonCircle
  bottom=""
  className=""
  contentEditable={false}
  controlled={true}
  direction="right"
  disabled={false}
  errorMessage=""
  focus={false}
  height=""
  iconName="bomb"
  iconStyle=""
  id=""
  left=""
  location="none"
  noedit={false}
  nohover={false}
  noripple={false}
  obj="ButtonCircle"
  onClick={[MockFunction]}
  padding=""
  selected={false}
  sizing="normal"
  style={
    Object {
      "borderColor": "#000000",
    }
  }
  testing={true}
  theme={null}
  tooltip=""
  top=""
  visible={true}
  width=""
  xcss={null}
>
  <ThemeProvider
    theme={
      Object {
        "backgroundColor": "#ffffff",
        "borderColor": "#c0c0c0",
        "color": "#000000",
        "headerBackgroundColor": "#004358",
        "headerForegroundColor": "#ffffff",
        "headerHoverColor": "#ffe11a",
        "hoverColor": "#c0c0c0",
        "inputBorderColor": "#c0c0c0",
        "selectedBackgroundColor": "#1f8a70",
        "selectedForegroundColor": "#ffe11a",
        "tooltipBackgroundColor": "#708090",
        "tooltipForegroundColor": "#ffffff",
        "transitionDelay": "0.5s",
      }
    }
  >
    <styled.div
      className="ui-button-circle"
    >
      <div
        className="ui-button-circle sc-bZQynM lnWXHT"
      >
        <styled.div
          height="24px"
          width="24px"
        >
          <div
            className="sc-gzVnrw bIUoWq"
            height="24px"
            width="24px"
          >
            <Styled(Button)
              bottom=""
              className=""
              contentEditable={false}
              controlled={true}
              direction="right"
              disabled={false}
              errorMessage=""
              focus={false}
              height=""
              iconName="bomb"
              iconStyle=""
              id=""
              left=""
              location="none"
              noedit={false}
              nohover={false}
              noripple={false}
              obj="ButtonCircle"
              onClick={[MockFunction]}
              padding=""
              selected={false}
              sizing="normal"
              style={
                Object {
                  "borderColor": "#000000",
                }
              }
              testing={true}
              theme={null}
              tooltip=""
              top=""
              visible={true}
              width=""
              xcss={null}
            >
              <Button
                bottom=""
                className="sc-htoDjs dXEIgP"
                contentEditable={false}
                controlled={true}
                direction="right"
                disabled={false}
                errorMessage=""
                focus={false}
                height=""
                iconName="bomb"
                iconStyle=""
                id=""
                left=""
                location="none"
                noedit={false}
                nohover={false}
                noripple={false}
                obj="ButtonCircle"
                onClick={[MockFunction]}
                padding=""
                selected={false}
                sizing="normal"
                style={
                  Object {
                    "borderColor": "#000000",
                  }
                }
                testing={true}
                theme={null}
                tooltip=""
                top=""
                visible={true}
                width=""
                xcss={null}
              >
                <ThemeProvider
                  theme={
                    Object {
                      "backgroundColor": "#ffffff",
                      "borderColor": "#c0c0c0",
                      "color": "#000000",
                      "headerBackgroundColor": "#004358",
                      "headerForegroundColor": "#ffffff",
                      "headerHoverColor": "#ffe11a",
                      "hoverColor": "#c0c0c0",
                      "inputBorderColor": "#c0c0c0",
                      "selectedBackgroundColor": "#1f8a70",
                      "selectedForegroundColor": "#ffe11a",
                      "tooltipBackgroundColor": "#708090",
                      "tooltipForegroundColor": "#ffffff",
                      "transitionDelay": "0.5s",
                    }
                  }
                >
                  <styled.div
                    className="ui-button ripple sc-htoDjs dXEIgP"
                    disabled={false}
                    id="Button-0"
                    onClick={[Function]}
                    style={
                      Object {
                        "borderColor": "#000000",
                      }
                    }
                    visible={true}
                  >
                    <div
                      className="ui-button ripple sc-htoDjs dXEIgP sc-EHOje jQdaQk"
                      disabled={false}
                      id="Button-0"
                      onClick={[Function]}
                      style={
                        Object {
                          "borderColor": "#000000",
                        }
                      }
                    >
                      <Icon
                        bottom=""
                        className=""
                        contentEditable={false}
                        controlled={true}
                        direction="right"
                        disabled={false}
                        errorMessage=""
                        focus={false}
                        height=""
                        iconName="bomb"
                        id=""
                        imageFile=""
                        left=""
                        location="none"
                        noedit={false}
                        nohover={false}
                        noripple={false}
                        obj="Icon"
                        padding=""
                        selected={false}
                        sizing="normal"
                        style={Object {}}
                        testing={true}
                        theme={null}
                        tooltip=""
                        top=""
                        visible={true}
                        width=""
                        xcss={null}
                      >
                        <ThemeProvider
                          theme={
                            Object {
                              "backgroundColor": "#ffffff",
                              "borderColor": "#c0c0c0",
                              "color": "#000000",
                              "headerBackgroundColor": "#004358",
                              "headerForegroundColor": "#ffffff",
                              "headerHoverColor": "#ffe11a",
                              "hoverColor": "#c0c0c0",
                              "inputBorderColor": "#c0c0c0",
                              "selectedBackgroundColor": "#1f8a70",
                              "selectedForegroundColor": "#ffe11a",
                              "tooltipBackgroundColor": "#708090",
                              "tooltipForegroundColor": "#ffffff",
                              "transitionDelay": "0.5s",
                            }
                          }
                        >
                          <styled.i
                            bottom=""
                            className="ui-icon fa fa-fw fa-bomb"
                            contentEditable={false}
                            controlled={true}
                            direction="right"
                            disabled={false}
                            errorMessage=""
                            focus={false}
                            height=""
                            iconName="bomb"
                            id=""
                            imageFile=""
                            left=""
                            location="none"
                            noedit={false}
                            nohover={false}
                            noripple={false}
                            obj="Icon"
                            padding=""
                            selected={false}
                            sizing="normal"
                            style={Object {}}
                            testing={true}
                            theme={null}
                            tooltip=""
                            top=""
                            visible={true}
                            width=""
                            xcss={null}
                          >
                            <i
                              className="ui-icon fa fa-fw fa-bomb sc-bdVaJa rkmGs"
                              contentEditable={false}
                              direction="right"
                              disabled={false}
                              height=""
                              id=""
                              selected={false}
                              style={Object {}}
                              width=""
                            />
                          </styled.i>
                        </ThemeProvider>
                      </Icon>
                    </div>
                  </styled.div>
                </ThemeProvider>
              </Button>
            </Styled(Button)>
          </div>
        </styled.div>
      </div>
    </styled.div>
  </ThemeProvider>
</ButtonCircle>
`;

exports[`Test creation of a ButtonCircle control 1`] = `
<ThemeProvider
  theme={
    Object {
      "backgroundColor": "#ffffff",
      "borderColor": "#c0c0c0",
      "color": "#000000",
      "headerBackgroundColor": "#004358",
      "headerForegroundColor": "#ffffff",
      "headerHoverColor": "#ffe11a",
      "hoverColor": "#c0c0c0",
      "inputBorderColor": "#c0c0c0",
      "selectedBackgroundColor": "#1f8a70",
      "selectedForegroundColor": "#ffe11a",
      "tooltipBackgroundColor": "#708090",
      "tooltipForegroundColor": "#ffffff",
      "transitionDelay": "0.5s",
    }
  }
>
  <styled.div
    className="ui-button-circle test-class"
  >
    <styled.div
      height="24px"
      width="24px"
    >
      <Styled(Button)
        bottom=""
        className="test-class"
        contentEditable={false}
        controlled={true}
        direction="right"
        disabled={false}
        errorMessage=""
        focus={false}
        height=""
        iconName="bomb"
        iconStyle=""
        id=""
        left=""
        location="none"
        noedit={false}
        nohover={false}
        noripple={false}
        obj="ButtonCircle"
        onClick={[Function]}
        padding=""
        selected={false}
        sizing="normal"
        style={
          Object {
            "borderColor": "#000000",
          }
        }
        testing={true}
        theme={null}
        tooltip=""
        top=""
        visible={true}
        width=""
        xcss={null}
      />
    </styled.div>
  </styled.div>
</ThemeProvider>
`;

exports[`Test disabling of a ButtonCircle control 1`] = `
<ButtonCircle
  bottom=""
  className=""
  contentEditable={false}
  controlled={true}
  direction="right"
  disabled={true}
  errorMessage=""
  focus={false}
  height=""
  iconName="bomb"
  iconStyle=""
  id=""
  left=""
  location="none"
  noedit={false}
  nohover={false}
  noripple={false}
  obj="ButtonCircle"
  onClick={[MockFunction]}
  padding=""
  selected={false}
  sizing="normal"
  style={
    Object {
      "borderColor": "#000000",
    }
  }
  testing={true}
  theme={null}
  tooltip=""
  top=""
  visible={true}
  width=""
  xcss={null}
>
  <ThemeProvider
    theme={
      Object {
        "backgroundColor": "#ffffff",
        "borderColor": "#c0c0c0",
        "color": "#000000",
        "headerBackgroundColor": "#004358",
        "headerForegroundColor": "#ffffff",
        "headerHoverColor": "#ffe11a",
        "hoverColor": "#c0c0c0",
        "inputBorderColor": "#c0c0c0",
        "selectedBackgroundColor": "#1f8a70",
        "selectedForegroundColor": "#ffe11a",
        "tooltipBackgroundColor": "#708090",
        "tooltipForegroundColor": "#ffffff",
        "transitionDelay": "0.5s",
      }
    }
  >
    <styled.div
      className="ui-button-circle"
    >
      <div
        className="ui-button-circle sc-bZQynM lnWXHT"
      >
        <styled.div
          height="24px"
          width="24px"
        >
          <div
            className="sc-gzVnrw bIUoWq"
            height="24px"
            width="24px"
          >
            <Styled(Button)
              bottom=""
              className=""
              contentEditable={false}
              controlled={true}
              direction="right"
              disabled={true}
              errorMessage=""
              focus={false}
              height=""
              iconName="bomb"
              iconStyle=""
              id=""
              left=""
              location="none"
              noedit={false}
              nohover={false}
              noripple={false}
              obj="ButtonCircle"
              onClick={[MockFunction]}
              padding=""
              selected={false}
              sizing="normal"
              style={
                Object {
                  "borderColor": "#000000",
                }
              }
              testing={true}
              theme={null}
              tooltip=""
              top=""
              visible={true}
              width=""
              xcss={null}
            >
              <Button
                bottom=""
                className="sc-htoDjs dXEIgP"
                contentEditable={false}
                controlled={true}
                direction="right"
                disabled={true}
                errorMessage=""
                focus={false}
                height=""
                iconName="bomb"
                iconStyle=""
                id=""
                left=""
                location="none"
                noedit={false}
                nohover={false}
                noripple={false}
                obj="ButtonCircle"
                onClick={[MockFunction]}
                padding=""
                selected={false}
                sizing="normal"
                style={
                  Object {
                    "borderColor": "#000000",
                  }
                }
                testing={true}
                theme={null}
                tooltip=""
                top=""
                visible={true}
                width=""
                xcss={null}
              >
                <ThemeProvider
                  theme={
                    Object {
                      "backgroundColor": "#ffffff",
                      "borderColor": "#c0c0c0",
                      "color": "#000000",
                      "headerBackgroundColor": "#004358",
                      "headerForegroundColor": "#ffffff",
                      "headerHoverColor": "#ffe11a",
                      "hoverColor": "#c0c0c0",
                      "inputBorderColor": "#c0c0c0",
                      "selectedBackgroundColor": "#1f8a70",
                      "selectedForegroundColor": "#ffe11a",
                      "tooltipBackgroundColor": "#708090",
                      "tooltipForegroundColor": "#ffffff",
                      "transitionDelay": "0.5s",
                    }
                  }
                >
                  <styled.div
                    className="ui-button nohover sc-htoDjs dXEIgP"
                    disabled={true}
                    id="Button-0"
                    onClick={[Function]}
                    style={
                      Object {
                        "borderColor": "#000000",
                      }
                    }
                    visible={true}
                  >
                    <div
                      className="ui-button nohover sc-htoDjs dXEIgP sc-EHOje jWnGrY"
                      disabled={true}
                      id="Button-0"
                      onClick={[Function]}
                      style={
                        Object {
                          "borderColor": "#000000",
                        }
                      }
                    >
                      <Icon
                        bottom=""
                        className=""
                        contentEditable={false}
                        controlled={true}
                        direction="right"
                        disabled={false}
                        errorMessage=""
                        focus={false}
                        height=""
                        iconName="bomb"
                        id=""
                        imageFile=""
                        left=""
                        location="none"
                        noedit={false}
                        nohover={false}
                        noripple={false}
                        obj="Icon"
                        padding=""
                        selected={false}
                        sizing="normal"
                        style={Object {}}
                        testing={true}
                        theme={null}
                        tooltip=""
                        top=""
                        visible={true}
                        width=""
                        xcss={null}
                      >
                        <ThemeProvider
                          theme={
                            Object {
                              "backgroundColor": "#ffffff",
                              "borderColor": "#c0c0c0",
                              "color": "#000000",
                              "headerBackgroundColor": "#004358",
                              "headerForegroundColor": "#ffffff",
                              "headerHoverColor": "#ffe11a",
                              "hoverColor": "#c0c0c0",
                              "inputBorderColor": "#c0c0c0",
                              "selectedBackgroundColor": "#1f8a70",
                              "selectedForegroundColor": "#ffe11a",
                              "tooltipBackgroundColor": "#708090",
                              "tooltipForegroundColor": "#ffffff",
                              "transitionDelay": "0.5s",
                            }
                          }
                        >
                          <styled.i
                            bottom=""
                            className="ui-icon fa fa-fw fa-bomb"
                            contentEditable={false}
                            controlled={true}
                            direction="right"
                            disabled={false}
                            errorMessage=""
                            focus={false}
                            height=""
                            iconName="bomb"
                            id=""
                            imageFile=""
                            left=""
                            location="none"
                            noedit={false}
                            nohover={false}
                            noripple={false}
                            obj="Icon"
                            padding=""
                            selected={false}
                            sizing="normal"
                            style={Object {}}
                            testing={true}
                            theme={null}
                            tooltip=""
                            top=""
                            visible={true}
                            width=""
                            xcss={null}
                          >
                            <i
                              className="ui-icon fa fa-fw fa-bomb sc-bdVaJa rkmGs"
                              contentEditable={false}
                              direction="right"
                              disabled={false}
                              height=""
                              id=""
                              selected={false}
                              style={Object {}}
                              width=""
                            />
                          </styled.i>
                        </ThemeProvider>
                      </Icon>
                    </div>
                  </styled.div>
                </ThemeProvider>
              </Button>
            </Styled(Button)>
          </div>
        </styled.div>
      </div>
    </styled.div>
  </ThemeProvider>
</ButtonCircle>
`;

exports[`Test making a ButtonCircle control invisible 1`] = `
<ButtonCircle
  bottom=""
  className=""
  contentEditable={false}
  controlled={true}
  direction="right"
  disabled={false}
  errorMessage=""
  focus={false}
  height=""
  iconName="bomb"
  iconStyle=""
  id=""
  left=""
  location="none"
  noedit={false}
  nohover={false}
  noripple={false}
  obj="ButtonCircle"
  onClick={[MockFunction]}
  padding=""
  selected={false}
  sizing="normal"
  style={
    Object {
      "borderColor": "#000000",
    }
  }
  testing={true}
  theme={null}
  tooltip=""
  top=""
  visible={false}
  width=""
  xcss={null}
>
  <ThemeProvider
    theme={
      Object {
        "backgroundColor": "#ffffff",
        "borderColor": "#c0c0c0",
        "color": "#000000",
        "headerBackgroundColor": "#004358",
        "headerForegroundColor": "#ffffff",
        "headerHoverColor": "#ffe11a",
        "hoverColor": "#c0c0c0",
        "inputBorderColor": "#c0c0c0",
        "selectedBackgroundColor": "#1f8a70",
        "selectedForegroundColor": "#ffe11a",
        "tooltipBackgroundColor": "#708090",
        "tooltipForegroundColor": "#ffffff",
        "transitionDelay": "0.5s",
      }
    }
  >
    <styled.div
      className="ui-button-circle"
    >
      <div
        className="ui-button-circle sc-bZQynM lnWXHT"
      >
        <styled.div
          height="24px"
          width="24px"
        >
          <div
            className="sc-gzVnrw bIUoWq"
            height="24px"
            width="24px"
          >
            <Styled(Button)
              bottom=""
              className=""
              contentEditable={false}
              controlled={true}
              direction="right"
              disabled={false}
              errorMessage=""
              focus={false}
              height=""
              iconName="bomb"
              iconStyle=""
              id=""
              left=""
              location="none"
              noedit={false}
              nohover={false}
              noripple={false}
              obj="ButtonCircle"
              onClick={[MockFunction]}
              padding=""
              selected={false}
              sizing="normal"
              style={
                Object {
                  "borderColor": "#000000",
                }
              }
              testing={true}
              theme={null}
              tooltip=""
              top=""
              visible={false}
              width=""
              xcss={null}
            >
              <Button
                bottom=""
                className="sc-htoDjs dXEIgP"
                contentEditable={false}
                controlled={true}
                direction="right"
                disabled={false}
                errorMessage=""
                focus={false}
                height=""
                iconName="bomb"
                iconStyle=""
                id=""
                left=""
                location="none"
                noedit={false}
                nohover={false}
                noripple={false}
                obj="ButtonCircle"
                onClick={[MockFunction]}
                padding=""
                selected={false}
                sizing="normal"
                style={
                  Object {
                    "borderColor": "#000000",
                  }
                }
                testing={true}
                theme={null}
                tooltip=""
                top=""
                visible={false}
                width=""
                xcss={null}
              >
                <ThemeProvider
                  theme={
                    Object {
                      "backgroundColor": "#ffffff",
                      "borderColor": "#c0c0c0",
                      "color": "#000000",
                      "headerBackgroundColor": "#004358",
                      "headerForegroundColor": "#ffffff",
                      "headerHoverColor": "#ffe11a",
                      "hoverColor": "#c0c0c0",
                      "inputBorderColor": "#c0c0c0",
                      "selectedBackgroundColor": "#1f8a70",
                      "selectedForegroundColor": "#ffe11a",
                      "tooltipBackgroundColor": "#708090",
                      "tooltipForegroundColor": "#ffffff",
                      "transitionDelay": "0.5s",
                    }
                  }
                >
                  <styled.div
                    className="ui-button ripple sc-htoDjs dXEIgP"
                    disabled={false}
                    id="Button-0"
                    onClick={[Function]}
                    style={
                      Object {
                        "borderColor": "#000000",
                      }
                    }
                    visible={false}
                  >
                    <div
                      className="ui-button ripple sc-htoDjs dXEIgP sc-EHOje kJnGDV"
                      disabled={false}
                      id="Button-0"
                      onClick={[Function]}
                      style={
                        Object {
                          "borderColor": "#000000",
                        }
                      }
                    >
                      <Icon
                        bottom=""
                        className=""
                        contentEditable={false}
                        controlled={true}
                        direction="right"
                        disabled={false}
                        errorMessage=""
                        focus={false}
                        height=""
                        iconName="bomb"
                        id=""
                        imageFile=""
                        left=""
                        location="none"
                        noedit={false}
                        nohover={false}
                        noripple={false}
                        obj="Icon"
                        padding=""
                        selected={false}
                        sizing="normal"
                        style={Object {}}
                        testing={true}
                        theme={null}
                        tooltip=""
                        top=""
                        visible={true}
                        width=""
                        xcss={null}
                      >
                        <ThemeProvider
                          theme={
                            Object {
                              "backgroundColor": "#ffffff",
                              "borderColor": "#c0c0c0",
                              "color": "#000000",
                              "headerBackgroundColor": "#004358",
                              "headerForegroundColor": "#ffffff",
                              "headerHoverColor": "#ffe11a",
                              "hoverColor": "#c0c0c0",
                              "inputBorderColor": "#c0c0c0",
                              "selectedBackgroundColor": "#1f8a70",
                              "selectedForegroundColor": "#ffe11a",
                              "tooltipBackgroundColor": "#708090",
                              "tooltipForegroundColor": "#ffffff",
                              "transitionDelay": "0.5s",
                            }
                          }
                        >
                          <styled.i
                            bottom=""
                            className="ui-icon fa fa-fw fa-bomb"
                            contentEditable={false}
                            controlled={true}
                            direction="right"
                            disabled={false}
                            errorMessage=""
                            focus={false}
                            height=""
                            iconName="bomb"
                            id=""
                            imageFile=""
                            left=""
                            location="none"
                            noedit={false}
                            nohover={false}
                            noripple={false}
                            obj="Icon"
                            padding=""
                            selected={false}
                            sizing="normal"
                            style={Object {}}
                            testing={true}
                            theme={null}
                            tooltip=""
                            top=""
                            visible={true}
                            width=""
                            xcss={null}
                          >
                            <i
                              className="ui-icon fa fa-fw fa-bomb sc-bdVaJa rkmGs"
                              contentEditable={false}
                              direction="right"
                              disabled={false}
                              height=""
                              id=""
                              selected={false}
                              style={Object {}}
                              width=""
                            />
                          </styled.i>
                        </ThemeProvider>
                      </Icon>
                    </div>
                  </styled.div>
                </ThemeProvider>
              </Button>
            </Styled(Button)>
          </div>
        </styled.div>
      </div>
    </styled.div>
  </ThemeProvider>
</ButtonCircle>
`;

exports[`Test retrieval of ButtonCircle props object 1`] = `
Object {
  "bottom": "",
  "children": null,
  "className": "",
  "contentEditable": false,
  "controlled": true,
  "direction": "right",
  "disabled": false,
  "errorMessage": "",
  "focus": false,
  "height": "",
  "iconName": "bomb",
  "iconStyle": "",
  "id": "",
  "left": "",
  "location": "none",
  "noedit": false,
  "nohover": false,
  "noripple": false,
  "obj": "ButtonCircle",
  "onClick": [Function],
  "padding": "",
  "selected": false,
  "sizing": "normal",
  "style": Object {
    "borderColor": "#000000",
  },
  "testing": true,
  "theme": null,
  "tooltip": "",
  "top": "",
  "visible": true,
  "width": "",
  "xcss": null,
}
`;
